--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@babel/register": "^7.17.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "sequelize": "^6.15.0",
+    "sequelize-cli": "^6.4.1",
+    "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0"
+  }
 }
