--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/register": "^7.17.0",
+    "@babel/runtime": "^7.17.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "sequelize": "^6.15.0",
@@ -17,6 +18,9 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0"
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^27.5.1"
   }
 }
