--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "sample-node-seq-proj",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "babel-node src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/register": "^7.17.0",
-    "@babel/runtime": "^7.17.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "sequelize": "^6.15.0",
     "sequelize-cli": "^6.4.1",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.2",
+    "@babel/node": "^7.16.8",
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
-    "babel-preset-env": "^1.7.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2"
   }
 }
