--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.0",
+    "http-status-codes": "^2.2.0",
     "sequelize": "^6.15.0",
     "sequelize-cli": "^6.4.1",
     "sqlite3": "^5.0.2"
